# darknet

./: CMakeLists.txt  Makefile  README.md  run_yfcc_det.py
pyDarknet/: __init__.py  detector.py
src/: image.h  network.h  parser.h  pydarknet.cpp  utils.h
